@@ -1,3 +1,7 @@
+* 2013-02-04 - viktor.pracht@open-xchange.com
+
+ - Fixed bug 24732: Version of UI is defined in RPM spec file but it should be used either from build system or from debian/changelog file
+
 * 2013-01-31 - viktor.pracht@open-xchange.com
 
  - Fixed bug 24669: Login doesn't work with cs_CZ locale
